--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Обеспечения</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-	      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" font-size-root = 10>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<form id="tg" class="container mt-5">
+<form id="tg" class="container mt-1">
 	<!--ensuringType	-->
-	<fieldset class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>1. Тип обеспечения</b></label>
-		<div class="col-sm-8">
+	<fieldset class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>1. Тип обеспечения <span>*</span></b></label>
+		<div class="col-sm-10 pt-1">
 			<select class="form-control" id="select" name="ensuringType" autocomplete="off" required>
 				<option value="">--Выбрать тип--</option>
 				<option value="Обесп.Исп.Контр.">Исполнение контракта</option>
@@ -25,8 +26,8 @@
 	
 	</fieldset>
 	<!--counterpartyBankBic	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>2. БИК</b> (9 цифр)</label>
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>2. БИК <span>*</span></b> (9 цифр)</label>
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,8}$/.test(this.value));"
@@ -34,8 +35,8 @@
 		</div>
 	</div>
 	<!--counterpartyAccountNumber	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>3. Казначейский счёт</b> (КС или Р/С- 20 цифр)<i> обычно начинается с
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>3. Казначейский счёт <span>*</span></b> (КС или Р/С- 20 цифр)<i> обычно начинается с
 			"03"</i></label>
 		<div class="col-sm-10">
 			<input type="text"
@@ -44,8 +45,8 @@
 		</div>
 	</div>
 	<!--counterpartyBankCorrAccount	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>4. Единый казначейский счёт</b> (корр. счёт - 20 цифр)<i> обычно
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>4. Единый казначейский счёт <span>*</span></b> (корр. счёт - 20 цифр)<i> обычно
 			начинается с "40"</i></label>
 		<div class="col-sm-10">
 			<input type="text"
@@ -54,8 +55,8 @@
 		</div>
 	</div>
 	<!--counterpartyINN	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>5. ИНН</b> (10 цифр)</label>
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>5. ИНН <span>*</span></b> (10 цифр)</label>
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,9}$/.test(this.value));"
@@ -63,8 +64,8 @@
 		</div>
 	</div>
 	<!--counterpartyKPP	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>6. КПП</b> (9 цифр)</label>
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>6. КПП <span>*</span></b> (9 цифр)</label>
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,8}$/.test(this.value));"
@@ -72,53 +73,53 @@
 		</div>
 	</div>
 	<!--counterpartyName	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>7. Получатель</b> (максимум 160 знаков)</label>
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>7. Получатель <span>*</span></b> (максимум 160 знаков)</label>
 		<div class="col-sm-10">
 			<input type="text" maxlength="160" class="form-control" name="counterpartyName" required>
 		</div>
 	</div>
 	<!--paymentAmount	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>8. Сумма обеспечения</b></label>
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>8. Сумма обеспечения <span>*</span></b></label>
 		<div class="col-sm-10">
 			<input type="number" min="0.00" max="200000.00" step="0.01" class="form-control" name="paymentAmount"
 			       required>
 		</div>
 	</div>
 	<!--paymentDate	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>9. Дата платежа</b></label>
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>9. Дата платежа</b></label>
 		<div class="col-sm-10">
 			<input type="date" id="tdate" name="paymentDate" class="form-control" required/>
 		</div>
 	</div>
 	<!--contractEIS	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>11. Номер закупки на ЕИС</b><i> (или другой идентифкатор, для
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>11. Номер закупки на ЕИС</b><i> (или другой идентифкатор, для
 			отслеживания, например номер контракта)</i></label>
 		<div class="col-sm-10">
 			<input type="text" maxlength="40" class="form-control" name="contractEIS" id="contractEIS">
 		</div>
 	</div>
 	<!--contractIKZ	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>12. Номер ИКЗ</b> (36 цифр)<i> необязательно, если есть требование</i></label>
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>12. Номер ИКЗ</b> (36 цифр)<i> необязательно, если есть требование</i></label>
 		<div class="col-sm-10">
 			<input type="text" maxlength="40" class="form-control" name="contractIKZ" id="contractIKZ">
 		</div>
 	</div>
 	<!--contractSubj	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>13. Предмет контракта</b><i> (до 200 знаков)</i></label>
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>13. Предмет контракта <span>*</span></b><i> (до 200 знаков)</i></label>
 		<div class="col-sm-10">
 			<input type="text" maxlength="200" class="form-control" name="contractSubj" id="contractSubj">
 		
 		</div>
 	</div>
 	<!--supplierBillId	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>14. УИН</b> ("поле 22")<i> необязательно, если есть
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>14. УИН</b> ("поле 22")<i> необязательно, если есть
 			требование</i></label>
 		<div class="col-sm-10">
 			<input type="text"
@@ -127,8 +128,8 @@
 		</div>
 	</div>
 	<!--taxInfoKBK	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>15. КБК</b> (20 цифр)<i> необязательно, если есть
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>15. КБК</b> (20 цифр)<i> необязательно, если есть
 			требование</i></label>
 		<div class="col-sm-10">
 			<input type="text"
@@ -137,8 +138,8 @@
 		</div>
 	</div>
 	<!--taxInfoOKATO	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>16. ОКТМО</b> (8 или 11 цифр)<i> необязательно, если есть
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>16. ОКТМО</b> (8 или 11 цифр)<i> необязательно, если есть
 			требование</i></label>
 		<div class="col-sm-10">
 			<input type="text"
@@ -147,11 +148,11 @@
 		</div>
 	</div>
 	<!--Назначение платежа	-->
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label"><b>Сформированное назначение платежа</b> (макс 210 знаков)<i> формируется
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>Сформированное назначение платежа</b> (макс 210 знаков)<i> формируется
 			на основании 1, 11, 12 и 13 пунктов</i></label>
 		<div class="col-sm-10">
-			<textarea maxlength="210" class="form-control" name="paymentPurpose" id="paymentPurpose"
+			<textarea maxlength="210" rows="5" class="form-control" name="paymentPurpose" id="paymentPurpose"
 			          disabled></textarea>
 			<div id="purposeLength" class="alert alert-danger m-2" role="alert" style="display: None">
 				Длина не должна превышать 210 знаков!
@@ -159,7 +160,7 @@
 		</div>
 	</div>
 	
-	<button type="submit" id="submit" class="btn btn-primary">Отправить на оплату</button>
+	<button type="submit" id="submit" class="btn btn-primary mb-1">Отправить на оплату</button>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="ensure_app.js"></script>
 </form>
