--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Обеспечения</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-	      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" font-size-root = 10>
+	      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"
+	      font-size-root=10>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <form id="tg" class="container mt-1">
 	<!--ensuringType	-->
-	<fieldset class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+	<fieldset
+			class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
 		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>1. Тип обеспечения <span>*</span></b></label>
 		<div class="col-sm-10 pt-1">
 			<select class="form-control" id="select" name="ensuringType" autocomplete="off" required>
@@ -36,8 +38,9 @@
 	</div>
 	<!--counterpartyAccountNumber	-->
 	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>3. Казначейский счёт <span>*</span></b> (КС или Р/С- 20 цифр)<i> обычно начинается с
-			"03"</i></label>
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>3. Казначейский счёт <span>*</span></b> (КС или Р/С- 20
+			цифр)<i> обычно начинается с
+				"03"</i></label>
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,19}$/.test(this.value));"
@@ -46,92 +49,93 @@
 	</div>
 	<!--counterpartyBankCorrAccount	-->
 	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>4. Единый казначейский счёт <span>*</span></b> (корр. счёт - 20 цифр)<i> обычно
-			начинается с "40"</i></label>
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>4. Единый казначейский счёт <span>*</span></b> (корр. счёт -
+			20 цифр)<i> обычно
+				начинается с "40"</i></label>
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,19}$/.test(this.value));"
 			       class="form-control" name="counterpartyBankCorrAccount" required>
 		</div>
 	</div>
-	<!--counterpartyINN	-->
-	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>5. ИНН <span>*</span></b> (10 цифр)</label>
-		<div class="col-sm-10">
-			<input type="text"
-			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,9}$/.test(this.value));"
-			       class="form-control" name="counterpartyINN" required>
-		</div>
-	</div>
-	<!--counterpartyKPP	-->
-	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>6. КПП <span>*</span></b> (9 цифр)</label>
-		<div class="col-sm-10">
-			<input type="text"
-			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,8}$/.test(this.value));"
-			       class="form-control" name="counterpartyKPP" required>
-		</div>
-	</div>
 	<!--counterpartyName	-->
 	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>7. Получатель <span>*</span></b> (максимум 160 знаков)</label>
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>5. Получатель <span>*</span></b> (максимум 160
+			знаков)</label>
 		<div class="col-sm-10">
 			<input type="text" maxlength="160" class="form-control" name="counterpartyName" required>
 		</div>
 	</div>
-	<!--paymentAmount	-->
-	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>8. Сумма обеспечения <span>*</span></b></label>
-		<div class="col-sm-10">
-			<input type="number" min="0.00" max="200000.00" step="0.01" class="form-control" name="paymentAmount"
-			       required>
+	<!--counterpartyINN	--><!--counterpartyKPP	-->
+	<div class="row mb-1 flex-nowrap bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 justify-content-between align-items-center">
+		<div class="col-sm-6 flex-shrink-1">
+			<label class="pb-0 pt-0"><b>6. ИНН <span>*</span></b> (10 цифр)</label>
+			<div>
+				<input type="text"
+				       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,9}$/.test(this.value));"
+				       class="form-control" name="counterpartyINN" required>
+			</div>
+		</div>
+	<!--counterpartyKPP	-->
+		<div class="col-sm-6 flex-shrink-1">
+			<label class="pb-0 pt-0"><b>7. КПП <span>*</span></b> (9 цифр)</label>
+			<div>
+				<input type="text"
+				       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,8}$/.test(this.value));"
+				       class="form-control" name="counterpartyKPP" required>
+			</div>
 		</div>
 	</div>
+	<!--paymentAmount	--><!--paymentDate	-->
+	<div class="row mb-1 flex-nowrap bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 justify-content-between align-items-center">
+		<div class="col-sm-7 flex-shrink-1">
+			<label class="pb-0 pt-0"><b>8. Сумма обеспечения <span>*</span></b></label>
+			<input type="number" min="0.00" max="200000.00" step="0.01" class="form-control" name="paymentAmount"
+				       required>
+		</div>
 	<!--paymentDate	-->
-	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>9. Дата платежа</b></label>
-		<div class="col-sm-10">
+		<div class="col-sm-7 flex-shrink-1">
+			<label class="pb-0 pt-0"><b>9. Дата платежа</b></label>
 			<input type="date" id="tdate" name="paymentDate" class="form-control" required/>
 		</div>
 	</div>
 	<!--contractEIS	-->
 	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>11. Номер закупки на ЕИС</b><i> (или другой идентифкатор, для
-			отслеживания, например номер контракта)</i></label>
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>11. Номер закупки на ЕИС</b><i> (или другой идентифкатор,
+			для отслеживания, например номер контракта)</i></label>
 		<div class="col-sm-10">
 			<input type="text" maxlength="40" class="form-control" name="contractEIS" id="contractEIS">
 		</div>
 	</div>
 	<!--contractIKZ	-->
 	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>12. Номер ИКЗ</b> (36 цифр)<i> необязательно, если есть требование</i></label>
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>12. Номер ИКЗ</b> (36 цифр)<i> если есть
+			требование</i></label>
 		<div class="col-sm-10">
 			<input type="text" maxlength="40" class="form-control" name="contractIKZ" id="contractIKZ">
 		</div>
 	</div>
 	<!--contractSubj	-->
 	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>13. Предмет контракта <span>*</span></b><i> (до 200 знаков)</i></label>
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>13. Предмет контракта <span>*</span></b><i> (до 200
+			знаков)</i></label>
 		<div class="col-sm-10">
 			<input type="text" maxlength="200" class="form-control" name="contractSubj" id="contractSubj">
 		
 		</div>
 	</div>
-	<!--supplierBillId	-->
-	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>14. УИН</b> ("поле 22")<i> необязательно, если есть
-			требование</i></label>
-		<div class="col-sm-10">
+	<!--supplierBillId	--><!--taxInfoKBK	-->
+	<div class="row mb-1 flex-nowrap bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 justify-content-between align-items-center">
+		<div class="col-sm-6 flex-shrink-1">
+			<label class="pb-0 pt-0"><b>14. УИН</b> ("поле 22")<i> если есть
+				требование</i></label>
 			<input type="text"
-			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,3}$/.test(this.value));"
-			       maxlength="4" class="form-control" name="supplierBillId">
+				       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,3}$/.test(this.value));"
+				       maxlength="4" class="form-control" name="supplierBillId">
 		</div>
-	</div>
 	<!--taxInfoKBK	-->
-	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>15. КБК</b> (20 цифр)<i> необязательно, если есть
-			требование</i></label>
-		<div class="col-sm-10">
+		<div class="col-sm-6 flex-shrink-1">
+			<label class="pb-0 pt-0"><b>15. КБК</b> (20 цифр)<i> если есть требование</i></label>
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,19}$/.test(this.value));"
 			       maxlength="20" class="form-control" name="taxInfoKBK">
@@ -149,7 +153,8 @@
 	</div>
 	<!--Назначение платежа	-->
 	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>Сформированное назначение платежа</b> (макс 210 знаков)<i> формируется
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>Сформированное назначение платежа</b> (макс 210 знаков)<i>
+			формируется
 			на основании 1, 11, 12 и 13 пунктов</i></label>
 		<div class="col-sm-10">
 			<textarea maxlength="210" rows="5" class="form-control" name="paymentPurpose" id="paymentPurpose"
