forbidden symbols replace inputs

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>5. Получатель <span>*</span></b> (максимум 160
 			знаков)</label>
 		<div class="col-sm-10">
-			<input type="text" maxlength="160" class="form-control" name="counterpartyName" required>
+			<input type="text" maxlength="160" class="form-control" name="counterpartyName" id="counterpartyName" required>
 		</div>
 	</div>
 	<!--counterpartyINN	--><!--counterpartyKPP	-->
