--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,8}$/.test(this.value));"
-			       class="form-control" name="counterpartyBankBic" id="counterpartyBankBic" min="9" required>
+			       class="form-control" name="counterpartyBankBic" id="counterpartyBankBic" minlength="9" required>
 		</div>
 	</div>
 	<!--counterpartyAccountNumber	-->
@@ -44,7 +44,7 @@
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,19}$/.test(this.value));"
-			       class="form-control" id="counterpartyAccountNumber" name="counterpartyAccountNumber" min="20" required>
+			       class="form-control" id="counterpartyAccountNumber" name="counterpartyAccountNumber" minlength="20" required>
 		</div>
 	</div>
 	<!--counterpartyBankCorrAccount	-->
@@ -55,7 +55,7 @@
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,19}$/.test(this.value));"
-			       class="form-control" name="counterpartyBankCorrAccount" id="counterpartyBankCorrAccount" min="20" required>
+			       class="form-control" name="counterpartyBankCorrAccount" id="counterpartyBankCorrAccount" minlength="20" required>
 		</div>
 	</div>
 	<!--counterpartyName	-->
@@ -73,7 +73,7 @@
 			<div>
 				<input type="text"
 				       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,9}$/.test(this.value));"
-				       class="form-control" name="counterpartyINN" id="counterpartyINN" min="9" required>
+				       class="form-control" name="counterpartyINN" id="counterpartyINN" minlength="9" required>
 			</div>
 		</div>
 	<!--counterpartyKPP	-->
@@ -82,7 +82,7 @@
 			<div>
 				<input type="text"
 				       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,8}$/.test(this.value));"
-				       class="form-control" name="counterpartyKPP" id="counterpartyKPP" min="10" required>
+				       class="form-control" name="counterpartyKPP" id="counterpartyKPP" minlength="10" required>
 			</div>
 		</div>
 	</div>
@@ -90,7 +90,7 @@
 	<div class="row mb-1 flex-nowrap bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 justify-content-between align-items-center">
 		<div class="col-sm-7 flex-shrink-1">
 			<label class="pb-0 pt-0"><b>8. Сумма обеспечения <span>*</span></b></label>
-			<input type="number" min="0.00" max="200000.00" step="0.01" class="form-control" name="paymentAmount"
+			<input type="number" min="0.01" max="200000.00" step="0.01" class="form-control" name="paymentAmount"
 				       required>
 		</div>
 	<!--paymentDate	-->
@@ -112,7 +112,7 @@
 		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>12. Номер ИКЗ</b> (36 цифр)<i> если есть
 			требование</i></label>
 		<div class="col-sm-10">
-			<input type="text" maxlength="40" class="form-control" name="contractIKZ" id="contractIKZ">
+			<input type="text" maxlength="40" class="form-control" name="contractIKZ" id="contractIKZ" minlength="36">
 		</div>
 	</div>
 	<!--contractSubj	-->
@@ -147,7 +147,7 @@
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,19}$/.test(this.value));"
-			       maxlength="11" class="form-control" name="taxInfoOKATO" id="taxInfoOKATO">
+			       minlength="8" maxlength="11" class="form-control" name="taxInfoOKATO" id="taxInfoOKATO">
 		</div>
 	</div>
 	<!--Назначение платежа	-->
