--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
 	</fieldset>
 	<!--counterpartyBankBic	-->
-	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
+	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center ">
 		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>2. БИК <span>*</span></b> (9 цифр)</label>
 		<div class="col-sm-10">
 			<input type="text"
@@ -88,13 +88,13 @@
 	</div>
 	<!--paymentAmount	--><!--paymentDate	-->
 	<div class="row mb-1 flex-nowrap bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 justify-content-between align-items-center">
-		<div class="col-sm-7 flex-shrink-1">
+		<div class="col-sm-8 flex-shrink-1">
 			<label class="pb-0 pt-0"><b>8. Сумма обеспечения <span>*</span></b></label>
 			<input type="number" min="0.01" max="200000.00" step="0.01" class="form-control" name="paymentAmount"
 				       required>
 		</div>
 	<!--paymentDate	-->
-		<div class="col-sm-7 flex-shrink-1">
+		<div class="col-sm-6 flex-shrink-1">
 			<label class="pb-0 pt-0"><b>9. Дата платежа</b></label>
 			<input type="date" id="tdate" name="paymentDate" class="form-control" required/>
 		</div>
@@ -127,27 +127,26 @@
 	<!--supplierBillId	--><!--taxInfoKBK	-->
 	<div class="row mb-1 flex-nowrap align-items-end bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 justify-content-between align-items-center">
 		<div class="col-sm-6 flex-shrink-1">
-			<label class="pb-0 pt-0"><b>14. УИН</b> ("поле 22", 4 цифры)<i> пусто если нет требования</i></label>
+			<label class="pb-0 pt-0"><b>14. УИН <span>*</span></b> ("поле 22", 4 цифры)<i> "0000" - нельзя!</i></label>
 			<input type="text"
 				       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,3}$/.test(this.value));"
-				       maxlength="4" class="form-control" name="supplierBillId" id="supplierBillId">
+				       maxlength="4" class="form-control" name="supplierBillId" id="supplierBillId" value="0002" required/>
 		</div>
 	<!--taxInfoKBK	-->
 		<div class="col-sm-6 flex-shrink-1">
-			<label class="pb-0 pt-0"><b>15. КБК</b> (20 цифр)<i> пусто если нет требования</i></label>
+			<label class="pb-0 pt-0"><b>15. КБК <span>*</span></b> ("0" или 20 цифр)</label>
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,19}$/.test(this.value));"
-			       maxlength="20" class="form-control" name="taxInfoKBK" id="taxInfoKBK">
+			       maxlength="20" class="form-control" value="0" name="taxInfoKBK" id="taxInfoKBK" required/>
 		</div>
 	</div>
 	<!--taxInfoOKATO	-->
 	<div class="row mb-1 bg-secondary bg-gradient bg-opacity-50 pb-1 border border-1 border rounded-3 align-items-center">
-		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>16. ОКТМО</b> (8 или 11 цифр)<i> необязательно, если есть
-			требование</i></label>
+		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>16. ОКТМО <span>*</span></b> (8 или 11 цифр)<i></i></label>
 		<div class="col-sm-10">
 			<input type="text"
 			       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,19}$/.test(this.value));"
-			       minlength="8" maxlength="11" class="form-control" name="taxInfoOKATO" id="taxInfoOKATO">
+			       minlength="8" maxlength="11" class="form-control" name="taxInfoOKATO" id="taxInfoOKATO" value="81701000" required/>
 		</div>
 	</div>
 	<!--Назначение платежа	-->
