fix all main problems

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		</div>
 	</div>
 	
-	<button type="submit" id="submit" class="btn btn-primary mb-1">Отправить на оплату</button>
+	<button type="submit" id="submit" class="btn btn-primary mb-1 position-absolute start-50 translate-middle-x">Отправить на оплату</button>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="ensure_app.js"></script>
 </form>
