--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div>
 				<input type="text"
 				       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,9}$/.test(this.value));"
-				       class="form-control" name="counterpartyINN" id="counterpartyINN" minlength="9" required>
+				       class="form-control" name="counterpartyINN" id="counterpartyINN" required>
 			</div>
 		</div>
 	<!--counterpartyKPP	-->
@@ -82,7 +82,7 @@
 			<div>
 				<input type="text"
 				       onkeypress="return (event.charCode >= 48 && event.charCode <= 57 && /^\d{0,8}$/.test(this.value));"
-				       class="form-control" name="counterpartyKPP" id="counterpartyKPP" minlength="10" required>
+				       class="form-control" name="counterpartyKPP" id="counterpartyKPP" required>
 			</div>
 		</div>
 	</div>
