--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</select>
 			<div class="col-sm-8" id="warranty_period" style="display: None">мес.:
 				<input type="number" min="1" max="36" step="1" class="form-control" name="warranty_period"
-				       id="warranty_per">
+				       value="NULL" id="warranty_per">
 			</div>
 		</div>
 	
