--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<label class="col-sm-2 col-form-label pb-0 pt-0"><b>4. Получатель <span>*</span></b> (максимум 160
 			знаков)</label>
 		<div class="col-sm-10">
-			<input type="text" maxlength="160" class="form-control" name="counterpartyName" id="counterpartyName" autocomplete="organization" required>
+			<input type="text" class="form-control" name="counterpartyName" id="counterpartyName" autocomplete="organization" required>
 		</div>
 	</div>
 	<!--counterpartyBankBic	-->
